// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: async-function.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-return-await */

export default async function test(): Promise<string> {
  return await 'this';
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-return-await */

export default async function test(): Promise<string> {
  return await 'this';
}
`;

exports[`matches expected output: async-function.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-return-await */

export default async function test(): Promise<string> {
  return await 'this';
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = test;

var _regenerator = _interopRequireDefault(require("@babel/runtime/regenerator"));

var _asyncToGenerator2 = _interopRequireDefault(require("@babel/runtime/helpers/asyncToGenerator"));

/* eslint-disable no-return-await */
function test() {
  return _test.apply(this, arguments);
}

function _test() {
  _test = (0, _asyncToGenerator2.default)( /*#__PURE__*/_regenerator.default.mark(function _callee() {
    return _regenerator.default.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return 'this';

          case 2:
            return _context.abrupt("return", _context.sent);

          case 3:
          case "end":
            return _context.stop();
        }
      }
    }, _callee);
  }));
  return _test.apply(this, arguments);
}
`;

exports[`matches expected output: async-function.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-return-await */

export default async function test(): Promise<string> {
  return await 'this';
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _asyncToGenerator from "@babel/runtime/helpers/esm/asyncToGenerator";
import _regeneratorRuntime from "@babel/runtime/regenerator";

/* eslint-disable no-return-await */
export default function test() {
  return _test.apply(this, arguments);
}

function _test() {
  _test = _asyncToGenerator( /*#__PURE__*/_regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return 'this';

          case 2:
            return _context.abrupt("return", _context.sent);

          case 3:
          case "end":
            return _context.stop();
        }
      }
    }, _callee);
  }));
  return _test.apply(this, arguments);
}
`;

exports[`matches expected output: babel-issue-8684.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict
// SEE: https://github.com/babel/babel/issues/8684
/* eslint-disable */

const aaa = 1;

// $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`
const bbb: string = aaa;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict
// SEE: https://github.com/babel/babel/issues/8684
/* eslint-disable */

const aaa = 1;

// $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`
const bbb: string = aaa;
`;

exports[`matches expected output: babel-issue-8684.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict
// SEE: https://github.com/babel/babel/issues/8684
/* eslint-disable */

const aaa = 1;

// $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`
const bbb: string = aaa;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

// SEE: https://github.com/babel/babel/issues/8684

/* eslint-disable */
var aaa = 1; // $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`

var bbb = aaa;
`;

exports[`matches expected output: babel-issue-8684.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict
// SEE: https://github.com/babel/babel/issues/8684
/* eslint-disable */

const aaa = 1;

// $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`
const bbb: string = aaa;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// SEE: https://github.com/babel/babel/issues/8684

/* eslint-disable */
var aaa = 1; // $FlowExpectedError[incompatible-type]: this line should stay here because \`aaa\` is incompatible with \`bbb\`

var bbb = aaa;
`;

exports[`matches expected output: babel-issue-9514.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9514

type $FragmentRef<T> = { +$fragmentRefs: $PropertyType<T, '$refType'>, ... };

// prettier-ignore
export type $RelayProps<Props, RelayPropT> = $ObjMap<
  $Diff<Props, { relay: RelayPropT | void, ... }>,
  (<T: () => void>( T) =>  T) &
  (<T: { +$refType: any, ... }>( T) =>  $FragmentRef<T>) &
  (<T: { +$refType: any, ... }>(?T) => ?$FragmentRef<T>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray< T>) =>  $ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray< T>) => ?$ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray<?T>) =>  $ReadOnlyArray<?$FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray<?T>) => ?$ReadOnlyArray<?$FragmentRef<T>>) &
  (<T>(T) => T)
>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9514

type $FragmentRef<T> = { +$fragmentRefs: $PropertyType<T, '$refType'>, ...};

// prettier-ignore
export type $RelayProps<Props, RelayPropT> = $ObjMap<
$Diff<Props, { relay: RelayPropT | void, ...}>,
(<T: () => void>(T) => T) & (
<T: { +$refType: any, ...}>(T) => $FragmentRef<T>) & (
<T: { +$refType: any, ...}>(?T) => ?$FragmentRef<T>) & (
<T: { +$refType: any, ...}>($ReadOnlyArray<T>) => $ReadOnlyArray<$FragmentRef<T>>) & (
<T: { +$refType: any, ...}>(?$ReadOnlyArray<T>) => ?$ReadOnlyArray<$FragmentRef<T>>) & (
<T: { +$refType: any, ...}>($ReadOnlyArray<?T>) => $ReadOnlyArray<?$FragmentRef<T>>) & (
<T: { +$refType: any, ...}>(?$ReadOnlyArray<?T>) => ?$ReadOnlyArray<?$FragmentRef<T>>) & (
<T>(T) => T)>;
`;

exports[`matches expected output: babel-issue-9514.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9514

type $FragmentRef<T> = { +$fragmentRefs: $PropertyType<T, '$refType'>, ... };

// prettier-ignore
export type $RelayProps<Props, RelayPropT> = $ObjMap<
  $Diff<Props, { relay: RelayPropT | void, ... }>,
  (<T: () => void>( T) =>  T) &
  (<T: { +$refType: any, ... }>( T) =>  $FragmentRef<T>) &
  (<T: { +$refType: any, ... }>(?T) => ?$FragmentRef<T>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray< T>) =>  $ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray< T>) => ?$ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray<?T>) =>  $ReadOnlyArray<?$FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray<?T>) => ?$ReadOnlyArray<?$FragmentRef<T>>) &
  (<T>(T) => T)
>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";
`;

exports[`matches expected output: babel-issue-9514.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9514

type $FragmentRef<T> = { +$fragmentRefs: $PropertyType<T, '$refType'>, ... };

// prettier-ignore
export type $RelayProps<Props, RelayPropT> = $ObjMap<
  $Diff<Props, { relay: RelayPropT | void, ... }>,
  (<T: () => void>( T) =>  T) &
  (<T: { +$refType: any, ... }>( T) =>  $FragmentRef<T>) &
  (<T: { +$refType: any, ... }>(?T) => ?$FragmentRef<T>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray< T>) =>  $ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray< T>) => ?$ReadOnlyArray< $FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>( $ReadOnlyArray<?T>) =>  $ReadOnlyArray<?$FragmentRef<T>>) &
  (<T: { +$refType: any, ... }>(?$ReadOnlyArray<?T>) => ?$ReadOnlyArray<?$FragmentRef<T>>) &
  (<T>(T) => T)
>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~

`;

exports[`matches expected output: babel-issue-9810.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9810

/*:: type TestType = any; */

const executeNodeScript = (
  aaa /*: string */,
  bbb /*: number */,
  ccc /*: any */,
) /*: TestType */ => {
  return [aaa, bbb, ccc];
};

const supportsESM = (target: string) /*: boolean %checks */ => {
  return target === 'js-esm';
};

module.exports = { executeNodeScript, supportsESM };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9810

type TestType = any;

const executeNodeScript = (
aaa: string,
bbb: number,
ccc: any)
: TestType => {
  return [aaa, bbb, ccc];
};

const supportsESM = (target: string): boolean %checks => {
  return target === 'js-esm';
};

module.exports = { executeNodeScript, supportsESM };
`;

exports[`matches expected output: babel-issue-9810.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9810

/*:: type TestType = any; */

const executeNodeScript = (
  aaa /*: string */,
  bbb /*: number */,
  ccc /*: any */,
) /*: TestType */ => {
  return [aaa, bbb, ccc];
};

const supportsESM = (target: string) /*: boolean %checks */ => {
  return target === 'js-esm';
};

module.exports = { executeNodeScript, supportsESM };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

// See: https://github.com/babel/babel/issues/9810
var executeNodeScript = function executeNodeScript(aaa, bbb, ccc) {
  return [aaa, bbb, ccc];
};

var supportsESM = function supportsESM(target) {
  return target === 'js-esm';
};

module.exports = {
  executeNodeScript: executeNodeScript,
  supportsESM: supportsESM
};
`;

exports[`matches expected output: babel-issue-9810.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

// See: https://github.com/babel/babel/issues/9810

/*:: type TestType = any; */

const executeNodeScript = (
  aaa /*: string */,
  bbb /*: number */,
  ccc /*: any */,
) /*: TestType */ => {
  return [aaa, bbb, ccc];
};

const supportsESM = (target: string) /*: boolean %checks */ => {
  return target === 'js-esm';
};

module.exports = { executeNodeScript, supportsESM };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// See: https://github.com/babel/babel/issues/9810
var executeNodeScript = function executeNodeScript(aaa, bbb, ccc) {
  return [aaa, bbb, ccc];
};

var supportsESM = function supportsESM(target) {
  return target === 'js-esm';
};

module.exports = {
  executeNodeScript: executeNodeScript,
  supportsESM: supportsESM
};
`;

exports[`matches expected output: babel-issue-9921.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
#!/usr/bin/env node

// @flow strict-local

// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */

new Set<() => void>([]);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
#!/usr/bin/env node

// @flow strict-local

// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */

new Set<() => void>([]);
`;

exports[`matches expected output: babel-issue-9921.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
#!/usr/bin/env node

// @flow strict-local

// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */

new Set<() => void>([]);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
#!/usr/bin/env node
// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */
"use strict";

new Set([]);
`;

exports[`matches expected output: babel-issue-9921.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
#!/usr/bin/env node

// @flow strict-local

// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */

new Set<() => void>([]);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
#!/usr/bin/env node
// See: https://github.com/babel/babel/issues/9921

/* eslint-disable */
new Set([]);
`;

exports[`matches expected output: babel-issue-10040.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// Babel is currently losing \` ... \` while  tranpiling this type.
// See: https://github.com/babel/babel/issues/10040

export type ExplicitlyInexact = { foo: number, ... };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

// Babel is currently losing \` ... \` while  tranpiling this type.
// See: https://github.com/babel/babel/issues/10040

export type ExplicitlyInexact = { foo: number, ...};
`;

exports[`matches expected output: babel-issue-10040.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// Babel is currently losing \` ... \` while  tranpiling this type.
// See: https://github.com/babel/babel/issues/10040

export type ExplicitlyInexact = { foo: number, ... };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";
`;

exports[`matches expected output: babel-issue-10040.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// Babel is currently losing \` ... \` while  tranpiling this type.
// See: https://github.com/babel/babel/issues/10040

export type ExplicitlyInexact = { foo: number, ... };

~~~~~~~~~~ OUTPUT ~~~~~~~~~~

`;

exports[`matches expected output: babel-issue-10367.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447

const re = /(?<x>.*)/u; // eslint-disable-line no-unused-vars

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447

const re = /(?<x>.*)/u; // eslint-disable-line no-unused-vars
`;

exports[`matches expected output: babel-issue-10367.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447

const re = /(?<x>.*)/u; // eslint-disable-line no-unused-vars

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

var _typeof = require("@babel/runtime/helpers/typeof");

var _inherits2 = _interopRequireDefault(require("@babel/runtime/helpers/inherits"));

var _setPrototypeOf2 = _interopRequireDefault(require("@babel/runtime/helpers/setPrototypeOf"));

function _wrapRegExp() { _wrapRegExp = function _wrapRegExp(re, groups) { return new BabelRegExp(re, void 0, groups); }; var _super = RegExp.prototype, _groups = new WeakMap(); function BabelRegExp(re, flags, groups) { var _this = new RegExp(re, flags); return _groups.set(_this, groups || _groups.get(re)), (0, _setPrototypeOf2.default)(_this, BabelRegExp.prototype); } function buildGroups(result, re) { var g = _groups.get(re); return Object.keys(g).reduce(function (groups, name) { return groups[name] = result[g[name]], groups; }, Object.create(null)); } return (0, _inherits2.default)(BabelRegExp, RegExp), BabelRegExp.prototype.exec = function (str) { var result = _super.exec.call(this, str); return result && (result.groups = buildGroups(result, this)), result; }, BabelRegExp.prototype[Symbol.replace] = function (str, substitution) { if ("string" == typeof substitution) { var groups = _groups.get(this); return _super[Symbol.replace].call(this, str, substitution.replace(/\\$<([^>]+)>/g, function (_, name) { return "$" + groups[name]; })); } if ("function" == typeof substitution) { var _this = this; return _super[Symbol.replace].call(this, str, function () { var args = arguments; return "object" != _typeof(args[args.length - 1]) && (args = [].slice.call(args)).push(buildGroups(args, _this)), substitution.apply(this, args); }); } return _super[Symbol.replace].call(this, str, substitution); }, _wrapRegExp.apply(this, arguments); }

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447
var re = /*#__PURE__*/_wrapRegExp(/((?:[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\uD7FF\\uE000-\\uFFFF]|[\\uD800-\\uDBFF][\\uDC00-\\uDFFF]|[\\uD800-\\uDBFF](?![\\uDC00-\\uDFFF])|(?:[^\\uD800-\\uDBFF]|^)[\\uDC00-\\uDFFF])*)/, {
  x: 1
}); // eslint-disable-line no-unused-vars
`;

exports[`matches expected output: babel-issue-10367.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447

const re = /(?<x>.*)/u; // eslint-disable-line no-unused-vars

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _typeof from "@babel/runtime/helpers/esm/typeof";
import _inherits from "@babel/runtime/helpers/esm/inherits";
import _setPrototypeOf from "@babel/runtime/helpers/esm/setPrototypeOf";

function _wrapRegExp() { _wrapRegExp = function _wrapRegExp(re, groups) { return new BabelRegExp(re, void 0, groups); }; var _super = RegExp.prototype, _groups = new WeakMap(); function BabelRegExp(re, flags, groups) { var _this = new RegExp(re, flags); return _groups.set(_this, groups || _groups.get(re)), _setPrototypeOf(_this, BabelRegExp.prototype); } function buildGroups(result, re) { var g = _groups.get(re); return Object.keys(g).reduce(function (groups, name) { return groups[name] = result[g[name]], groups; }, Object.create(null)); } return _inherits(BabelRegExp, RegExp), BabelRegExp.prototype.exec = function (str) { var result = _super.exec.call(this, str); return result && (result.groups = buildGroups(result, this)), result; }, BabelRegExp.prototype[Symbol.replace] = function (str, substitution) { if ("string" == typeof substitution) { var groups = _groups.get(this); return _super[Symbol.replace].call(this, str, substitution.replace(/\\$<([^>]+)>/g, function (_, name) { return "$" + groups[name]; })); } if ("function" == typeof substitution) { var _this = this; return _super[Symbol.replace].call(this, str, function () { var args = arguments; return "object" != _typeof(args[args.length - 1]) && (args = [].slice.call(args)).push(buildGroups(args, _this)), substitution.apply(this, args); }); } return _super[Symbol.replace].call(this, str, substitution); }, _wrapRegExp.apply(this, arguments); }

// https://github.com/babel/babel/issues/10367
// https://github.com/babel/babel/pull/10447
var re = /*#__PURE__*/_wrapRegExp(/((?:[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\uD7FF\\uE000-\\uFFFF]|[\\uD800-\\uDBFF][\\uDC00-\\uDFFF]|[\\uD800-\\uDBFF](?![\\uDC00-\\uDFFF])|(?:[^\\uD800-\\uDBFF]|^)[\\uDC00-\\uDFFF])*)/, {
  x: 1
}); // eslint-disable-line no-unused-vars
`;

exports[`matches expected output: bigint.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const theBiggestInt = 9007199254740991n;

const alsoHuge = BigInt(9007199254740991);
// ↪ 9007199254740991n

const hugeButString = BigInt('9007199254740991');
// ↪ 9007199254740991n

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

const theBiggestInt = 9007199254740991n;

const alsoHuge = BigInt(9007199254740991);
// ↪ 9007199254740991n

const hugeButString = BigInt('9007199254740991');
// ↪ 9007199254740991n
`;

exports[`matches expected output: bigint.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const theBiggestInt = 9007199254740991n;

const alsoHuge = BigInt(9007199254740991);
// ↪ 9007199254740991n

const hugeButString = BigInt('9007199254740991');
// ↪ 9007199254740991n

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
var theBiggestInt = 9007199254740991n;
var alsoHuge = BigInt(9007199254740991); // ↪ 9007199254740991n

var hugeButString = BigInt('9007199254740991'); // ↪ 9007199254740991n
`;

exports[`matches expected output: bigint.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const theBiggestInt = 9007199254740991n;

const alsoHuge = BigInt(9007199254740991);
// ↪ 9007199254740991n

const hugeButString = BigInt('9007199254740991');
// ↪ 9007199254740991n

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
var theBiggestInt = 9007199254740991n;
var alsoHuge = BigInt(9007199254740991); // ↪ 9007199254740991n

var hugeButString = BigInt('9007199254740991'); // ↪ 9007199254740991n
`;

exports[`matches expected output: capturing-groups.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/*  eslint-disable no-console */

const re = /(?<year>\\d{4})-(?<month>\\d{2})-(?<day>\\d{2})/;

console.log(re.exec('1999-02-29')?.groups?.year);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/*  eslint-disable no-console */

const re = /(?<year>\\d{4})-(?<month>\\d{2})-(?<day>\\d{2})/;

console.log(re.exec('1999-02-29')?.groups?.year);
`;

exports[`matches expected output: capturing-groups.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/*  eslint-disable no-console */

const re = /(?<year>\\d{4})-(?<month>\\d{2})-(?<day>\\d{2})/;

console.log(re.exec('1999-02-29')?.groups?.year);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

var _typeof = require("@babel/runtime/helpers/typeof");

var _inherits2 = _interopRequireDefault(require("@babel/runtime/helpers/inherits"));

var _setPrototypeOf2 = _interopRequireDefault(require("@babel/runtime/helpers/setPrototypeOf"));

var _re$exec, _re$exec$groups;

function _wrapRegExp() { _wrapRegExp = function _wrapRegExp(re, groups) { return new BabelRegExp(re, void 0, groups); }; var _super = RegExp.prototype, _groups = new WeakMap(); function BabelRegExp(re, flags, groups) { var _this = new RegExp(re, flags); return _groups.set(_this, groups || _groups.get(re)), (0, _setPrototypeOf2.default)(_this, BabelRegExp.prototype); } function buildGroups(result, re) { var g = _groups.get(re); return Object.keys(g).reduce(function (groups, name) { return groups[name] = result[g[name]], groups; }, Object.create(null)); } return (0, _inherits2.default)(BabelRegExp, RegExp), BabelRegExp.prototype.exec = function (str) { var result = _super.exec.call(this, str); return result && (result.groups = buildGroups(result, this)), result; }, BabelRegExp.prototype[Symbol.replace] = function (str, substitution) { if ("string" == typeof substitution) { var groups = _groups.get(this); return _super[Symbol.replace].call(this, str, substitution.replace(/\\$<([^>]+)>/g, function (_, name) { return "$" + groups[name]; })); } if ("function" == typeof substitution) { var _this = this; return _super[Symbol.replace].call(this, str, function () { var args = arguments; return "object" != _typeof(args[args.length - 1]) && (args = [].slice.call(args)).push(buildGroups(args, _this)), substitution.apply(this, args); }); } return _super[Symbol.replace].call(this, str, substitution); }, _wrapRegExp.apply(this, arguments); }

/*  eslint-disable no-console */
var re = /*#__PURE__*/_wrapRegExp(/([0-9]{4})\\x2D([0-9]{2})\\x2D([0-9]{2})/, {
  year: 1,
  month: 2,
  day: 3
});

console.log((_re$exec = re.exec('1999-02-29')) === null || _re$exec === void 0 ? void 0 : (_re$exec$groups = _re$exec.groups) === null || _re$exec$groups === void 0 ? void 0 : _re$exec$groups.year);
`;

exports[`matches expected output: capturing-groups.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/*  eslint-disable no-console */

const re = /(?<year>\\d{4})-(?<month>\\d{2})-(?<day>\\d{2})/;

console.log(re.exec('1999-02-29')?.groups?.year);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _typeof from "@babel/runtime/helpers/esm/typeof";
import _inherits from "@babel/runtime/helpers/esm/inherits";
import _setPrototypeOf from "@babel/runtime/helpers/esm/setPrototypeOf";

var _re$exec, _re$exec$groups;

function _wrapRegExp() { _wrapRegExp = function _wrapRegExp(re, groups) { return new BabelRegExp(re, void 0, groups); }; var _super = RegExp.prototype, _groups = new WeakMap(); function BabelRegExp(re, flags, groups) { var _this = new RegExp(re, flags); return _groups.set(_this, groups || _groups.get(re)), _setPrototypeOf(_this, BabelRegExp.prototype); } function buildGroups(result, re) { var g = _groups.get(re); return Object.keys(g).reduce(function (groups, name) { return groups[name] = result[g[name]], groups; }, Object.create(null)); } return _inherits(BabelRegExp, RegExp), BabelRegExp.prototype.exec = function (str) { var result = _super.exec.call(this, str); return result && (result.groups = buildGroups(result, this)), result; }, BabelRegExp.prototype[Symbol.replace] = function (str, substitution) { if ("string" == typeof substitution) { var groups = _groups.get(this); return _super[Symbol.replace].call(this, str, substitution.replace(/\\$<([^>]+)>/g, function (_, name) { return "$" + groups[name]; })); } if ("function" == typeof substitution) { var _this = this; return _super[Symbol.replace].call(this, str, function () { var args = arguments; return "object" != _typeof(args[args.length - 1]) && (args = [].slice.call(args)).push(buildGroups(args, _this)), substitution.apply(this, args); }); } return _super[Symbol.replace].call(this, str, substitution); }, _wrapRegExp.apply(this, arguments); }

/*  eslint-disable no-console */
var re = /*#__PURE__*/_wrapRegExp(/([0-9]{4})\\x2D([0-9]{2})\\x2D([0-9]{2})/, {
  year: 1,
  month: 2,
  day: 3
});

console.log((_re$exec = re.exec('1999-02-29')) === null || _re$exec === void 0 ? void 0 : (_re$exec$groups = _re$exec.groups) === null || _re$exec$groups === void 0 ? void 0 : _re$exec$groups.year);
`;

exports[`matches expected output: class-fields.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

export default class ClassFields {
  publicField: number = 1;
  #privateField: number = 2;
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

export default class ClassFields {
  publicField: number = 1;
  #privateField: number = 2;}
`;

exports[`matches expected output: class-fields.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

export default class ClassFields {
  publicField: number = 1;
  #privateField: number = 2;
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;

var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));

var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));

var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));

function _classPrivateFieldInitSpec(obj, privateMap, value) { _checkPrivateRedeclaration(obj, privateMap); privateMap.set(obj, value); }

function _checkPrivateRedeclaration(obj, privateCollection) { if (privateCollection.has(obj)) { throw new TypeError("Cannot initialize the same private elements twice on an object"); } }

var _privateField = /*#__PURE__*/new WeakMap();

var ClassFields = /*#__PURE__*/(0, _createClass2.default)(function ClassFields() {
  (0, _classCallCheck2.default)(this, ClassFields);
  (0, _defineProperty2.default)(this, "publicField", 1);

  _classPrivateFieldInitSpec(this, _privateField, {
    writable: true,
    value: 2
  });
});
exports.default = ClassFields;
`;

exports[`matches expected output: class-fields.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

export default class ClassFields {
  publicField: number = 1;
  #privateField: number = 2;
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _createClass from "@babel/runtime/helpers/esm/createClass";
import _classCallCheck from "@babel/runtime/helpers/esm/classCallCheck";
import _defineProperty from "@babel/runtime/helpers/esm/defineProperty";

function _classPrivateFieldInitSpec(obj, privateMap, value) { _checkPrivateRedeclaration(obj, privateMap); privateMap.set(obj, value); }

function _checkPrivateRedeclaration(obj, privateCollection) { if (privateCollection.has(obj)) { throw new TypeError("Cannot initialize the same private elements twice on an object"); } }

var _privateField = /*#__PURE__*/new WeakMap();

var ClassFields = /*#__PURE__*/_createClass(function ClassFields() {
  _classCallCheck(this, ClassFields);

  _defineProperty(this, "publicField", 1);

  _classPrivateFieldInitSpec(this, _privateField, {
    writable: true,
    value: 2
  });
});

export { ClassFields as default };
`;

exports[`matches expected output: dev-expression.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-console */

if (__DEV__) {
  const dev = __DEV__ ? 'foo' : 'bar';
  console.log(dev);

  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',

    // this should change (replaceable __DEV__ value):
    key: __DEV__,
  });
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/*@flow strict*/declare var __DEV__: boolean;

/* eslint-disable no-console */

if (__DEV__) {
  const dev = __DEV__ ? 'foo' : 'bar';
  console.log(dev);

  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',

    // this should change (replaceable __DEV__ value):
    key: __DEV__ });

}
`;

exports[`matches expected output: dev-expression.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-console */

if (__DEV__) {
  const dev = __DEV__ ? 'foo' : 'bar';
  console.log(dev);

  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',

    // this should change (replaceable __DEV__ value):
    key: __DEV__,
  });
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable no-console */
if (process.env.NODE_ENV !== "production") {
  var dev = process.env.NODE_ENV !== "production" ? 'foo' : 'bar';
  console.log(dev);
  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',
    // this should change (replaceable __DEV__ value):
    key: process.env.NODE_ENV !== "production"
  });
}
`;

exports[`matches expected output: dev-expression.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable no-console */

if (__DEV__) {
  const dev = __DEV__ ? 'foo' : 'bar';
  console.log(dev);

  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',

    // this should change (replaceable __DEV__ value):
    key: __DEV__,
  });
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable no-console */
if (process.env.NODE_ENV !== "production") {
  var dev = process.env.NODE_ENV !== "production" ? 'foo' : 'bar';
  console.log(dev);
  console.warn({
    // this shouldn't change (valid object key):
    __DEV__: 'value',
    // this should change (replaceable __DEV__ value):
    key: process.env.NODE_ENV !== "production"
  });
}
`;

exports[`matches expected output: dev-expression-abuse-1.error.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const __DEV__ = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dev-expression-abuse-1.error.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const __DEV__ = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dev-expression-abuse-1.error.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const __DEV__ = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dev-expression-abuse-2.error.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

let a,
  __DEV__,
  b = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dev-expression-abuse-2.error.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

let a,
  __DEV__,
  b = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dev-expression-abuse-2.error.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

let a,
  __DEV__,
  b = process.env.NODE_ENV !== 'production';

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: /mock/path/mockFile.js: You are trying to re-declare __DEV__ virtual constant but that's illegal. This constant is being defined by our Babel preset.
`;

exports[`matches expected output: dynamic-import.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const React = require('react');

const BoldTodoRenderer = React.lazy(() =>
  import(
    // $FlowExpectedError[cannot-resolve-module]
    './BoldTodoRenderer'
  ),
);

module.exports = function MyComponent(): React.Element<typeof React.Suspense> {
  return (
    <React.Suspense fallback={<div>Loading...</div>}>
      <BoldTodoRenderer />
    </React.Suspense>
  );
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const React = require('react');

const BoldTodoRenderer = React.lazy(() =>
import(
// $FlowExpectedError[cannot-resolve-module]
'./BoldTodoRenderer'));



module.exports = function MyComponent(): React.Element<typeof React.Suspense> {
  return (
    <React.Suspense fallback={<div>Loading...</div>}>
      <BoldTodoRenderer />
    </React.Suspense>);

};
`;

exports[`matches expected output: dynamic-import.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const React = require('react');

const BoldTodoRenderer = React.lazy(() =>
  import(
    // $FlowExpectedError[cannot-resolve-module]
    './BoldTodoRenderer'
  ),
);

module.exports = function MyComponent(): React.Element<typeof React.Suspense> {
  return (
    <React.Suspense fallback={<div>Loading...</div>}>
      <BoldTodoRenderer />
    </React.Suspense>
  );
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

var _typeof2 = _interopRequireDefault(require("@babel/runtime/helpers/typeof"));

var _jsxRuntime = require("react/jsx-runtime");

function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== "function") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function _getRequireWildcardCache(nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }

function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || (0, _typeof2.default)(obj) !== "object" && typeof obj !== "function") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

/* eslint-disable */
var React = require('react');

var BoldTodoRenderer = React.lazy(function () {
  return Promise.resolve().then(function () {
    return _interopRequireWildcard(require('./BoldTodoRenderer'));
  });
});

module.exports = function MyComponent() {
  return /*#__PURE__*/(0, _jsxRuntime.jsx)(React.Suspense, {
    fallback: /*#__PURE__*/(0, _jsxRuntime.jsx)("div", {
      children: "Loading..."
    }),
    children: /*#__PURE__*/(0, _jsxRuntime.jsx)(BoldTodoRenderer, {})
  });
};
`;

exports[`matches expected output: dynamic-import.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const React = require('react');

const BoldTodoRenderer = React.lazy(() =>
  import(
    // $FlowExpectedError[cannot-resolve-module]
    './BoldTodoRenderer'
  ),
);

module.exports = function MyComponent(): React.Element<typeof React.Suspense> {
  return (
    <React.Suspense fallback={<div>Loading...</div>}>
      <BoldTodoRenderer />
    </React.Suspense>
  );
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import { jsx as _jsx } from "react/jsx-runtime";

/* eslint-disable */
var React = require('react');

var BoldTodoRenderer = React.lazy(function () {
  return import( // $FlowExpectedError[cannot-resolve-module]
  './BoldTodoRenderer');
});

module.exports = function MyComponent() {
  return /*#__PURE__*/_jsx(React.Suspense, {
    fallback: /*#__PURE__*/_jsx("div", {
      children: "Loading..."
    }),
    children: /*#__PURE__*/_jsx(BoldTodoRenderer, {})
  });
};
`;

exports[`matches expected output: exponentiation-operator.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const x: number = (1 ** 2) ** (3 ** 4);

console.warn(x);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const x: number = (1 ** 2) ** 3 ** 4;

console.warn(x);
`;

exports[`matches expected output: exponentiation-operator.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const x: number = (1 ** 2) ** (3 ** 4);

console.warn(x);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
var x = Math.pow(Math.pow(1, 2), Math.pow(3, 4));
console.warn(x);
`;

exports[`matches expected output: exponentiation-operator.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const x: number = (1 ** 2) ** (3 ** 4);

console.warn(x);

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
var x = Math.pow(Math.pow(1, 2), Math.pow(3, 4));
console.warn(x);
`;

exports[`matches expected output: flow-enums.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

enum StatusDefault1 {
  Active,
  Paused,
  Off,
}

enum StatusDefault2 of string {
  Active,
  Paused,
  Off,
}

enum StatusString1 {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusString2 of string {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusNumber1 {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusNumber2 of number {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusBoolean1 {
  Active = true,
  Off = false,
}

enum StatusBoolean2 of boolean {
  Active = true,
  Off = false,
}

enum StatusSymbol of symbol {
  Active,
  Paused,
  Off,
}

enum StatusUnknownMembers {
  Active,
  Paused,
  Off,
  ...
}

export const a: StatusDefault1 = StatusDefault1.Active;
export const b: StatusString1 = StatusString1.Active;
export const c: StatusNumber1 = StatusNumber1.Active;
export const d: StatusBoolean2 = StatusBoolean2.Active;
export const e: StatusSymbol = StatusSymbol.Active;
export const f: StatusUnknownMembers = StatusUnknownMembers.Active;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

enum StatusDefault1 {
  Active,
  Paused,
  Off,}


enum StatusDefault2 of string {
  Active,
  Paused,
  Off,}


enum StatusString1 {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',}


enum StatusString2 of string {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',}


enum StatusNumber1 {
  Active = 1,
  Paused = 2,
  Off = 3,}


enum StatusNumber2 of number {
  Active = 1,
  Paused = 2,
  Off = 3,}


enum StatusBoolean1 {
  Active = true,
  Off = false,}


enum StatusBoolean2 of boolean {
  Active = true,
  Off = false,}


enum StatusSymbol of symbol {
  Active,
  Paused,
  Off,}


enum StatusUnknownMembers {
  Active,
  Paused,
  Off,...}



export const a: StatusDefault1 = StatusDefault1.Active;
export const b: StatusString1 = StatusString1.Active;
export const c: StatusNumber1 = StatusNumber1.Active;
export const d: StatusBoolean2 = StatusBoolean2.Active;
export const e: StatusSymbol = StatusSymbol.Active;
export const f: StatusUnknownMembers = StatusUnknownMembers.Active;
`;

exports[`matches expected output: flow-enums.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

enum StatusDefault1 {
  Active,
  Paused,
  Off,
}

enum StatusDefault2 of string {
  Active,
  Paused,
  Off,
}

enum StatusString1 {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusString2 of string {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusNumber1 {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusNumber2 of number {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusBoolean1 {
  Active = true,
  Off = false,
}

enum StatusBoolean2 of boolean {
  Active = true,
  Off = false,
}

enum StatusSymbol of symbol {
  Active,
  Paused,
  Off,
}

enum StatusUnknownMembers {
  Active,
  Paused,
  Off,
  ...
}

export const a: StatusDefault1 = StatusDefault1.Active;
export const b: StatusString1 = StatusString1.Active;
export const c: StatusNumber1 = StatusNumber1.Active;
export const d: StatusBoolean2 = StatusBoolean2.Active;
export const e: StatusSymbol = StatusSymbol.Active;
export const f: StatusUnknownMembers = StatusUnknownMembers.Active;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.f = exports.e = exports.d = exports.c = exports.b = exports.a = void 0;

var StatusDefault1 = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

var StatusDefault2 = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

var StatusString1 = require("flow-enums-runtime")({
  Active: 'active',
  Paused: 'paused',
  Off: 'off'
});

var StatusString2 = require("flow-enums-runtime")({
  Active: 'active',
  Paused: 'paused',
  Off: 'off'
});

var StatusNumber1 = require("flow-enums-runtime")({
  Active: 1,
  Paused: 2,
  Off: 3
});

var StatusNumber2 = require("flow-enums-runtime")({
  Active: 1,
  Paused: 2,
  Off: 3
});

var StatusBoolean1 = require("flow-enums-runtime")({
  Active: true,
  Off: false
});

var StatusBoolean2 = require("flow-enums-runtime")({
  Active: true,
  Off: false
});

var StatusSymbol = require("flow-enums-runtime")({
  Active: Symbol("Active"),
  Paused: Symbol("Paused"),
  Off: Symbol("Off")
});

var StatusUnknownMembers = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

var a = StatusDefault1.Active;
exports.a = a;
var b = StatusString1.Active;
exports.b = b;
var c = StatusNumber1.Active;
exports.c = c;
var d = StatusBoolean2.Active;
exports.d = d;
var e = StatusSymbol.Active;
exports.e = e;
var f = StatusUnknownMembers.Active;
exports.f = f;
`;

exports[`matches expected output: flow-enums.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

enum StatusDefault1 {
  Active,
  Paused,
  Off,
}

enum StatusDefault2 of string {
  Active,
  Paused,
  Off,
}

enum StatusString1 {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusString2 of string {
  Active = 'active',
  Paused = 'paused',
  Off = 'off',
}

enum StatusNumber1 {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusNumber2 of number {
  Active = 1,
  Paused = 2,
  Off = 3,
}

enum StatusBoolean1 {
  Active = true,
  Off = false,
}

enum StatusBoolean2 of boolean {
  Active = true,
  Off = false,
}

enum StatusSymbol of symbol {
  Active,
  Paused,
  Off,
}

enum StatusUnknownMembers {
  Active,
  Paused,
  Off,
  ...
}

export const a: StatusDefault1 = StatusDefault1.Active;
export const b: StatusString1 = StatusString1.Active;
export const c: StatusNumber1 = StatusNumber1.Active;
export const d: StatusBoolean2 = StatusBoolean2.Active;
export const e: StatusSymbol = StatusSymbol.Active;
export const f: StatusUnknownMembers = StatusUnknownMembers.Active;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
var StatusDefault1 = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

var StatusDefault2 = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

var StatusString1 = require("flow-enums-runtime")({
  Active: 'active',
  Paused: 'paused',
  Off: 'off'
});

var StatusString2 = require("flow-enums-runtime")({
  Active: 'active',
  Paused: 'paused',
  Off: 'off'
});

var StatusNumber1 = require("flow-enums-runtime")({
  Active: 1,
  Paused: 2,
  Off: 3
});

var StatusNumber2 = require("flow-enums-runtime")({
  Active: 1,
  Paused: 2,
  Off: 3
});

var StatusBoolean1 = require("flow-enums-runtime")({
  Active: true,
  Off: false
});

var StatusBoolean2 = require("flow-enums-runtime")({
  Active: true,
  Off: false
});

var StatusSymbol = require("flow-enums-runtime")({
  Active: Symbol("Active"),
  Paused: Symbol("Paused"),
  Off: Symbol("Off")
});

var StatusUnknownMembers = require("flow-enums-runtime").Mirrored(["Active", "Paused", "Off"]);

export var a = StatusDefault1.Active;
export var b = StatusString1.Active;
export var c = StatusNumber1.Active;
export var d = StatusBoolean2.Active;
export var e = StatusSymbol.Active;
export var f = StatusUnknownMembers.Active;
`;

exports[`matches expected output: generator.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

function* generator(i) {
  yield i;
  yield i + 10;
}

const gen = generator(10);

console.log(gen.next().value); // 10
console.log(gen.next().value); // 20

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

function* generator(i) {
  yield i;
  yield i + 10;
}

const gen = generator(10);

console.log(gen.next().value); // 10
console.log(gen.next().value); // 20
`;

exports[`matches expected output: generator.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

function* generator(i) {
  yield i;
  yield i + 10;
}

const gen = generator(10);

console.log(gen.next().value); // 10
console.log(gen.next().value); // 20

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

var _regenerator = _interopRequireDefault(require("@babel/runtime/regenerator"));

var _marked = /*#__PURE__*/_regenerator.default.mark(generator);

/* eslint-disable */
function generator(i) {
  return _regenerator.default.wrap(function generator$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          _context.next = 2;
          return i;

        case 2:
          _context.next = 4;
          return i + 10;

        case 4:
        case "end":
          return _context.stop();
      }
    }
  }, _marked);
}

var gen = generator(10);
console.log(gen.next().value); // 10

console.log(gen.next().value); // 20
`;

exports[`matches expected output: generator.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

function* generator(i) {
  yield i;
  yield i + 10;
}

const gen = generator(10);

console.log(gen.next().value); // 10
console.log(gen.next().value); // 20

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _regeneratorRuntime from "@babel/runtime/regenerator";

var _marked = /*#__PURE__*/_regeneratorRuntime.mark(generator);

/* eslint-disable */
function generator(i) {
  return _regeneratorRuntime.wrap(function generator$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          _context.next = 2;
          return i;

        case 2:
          _context.next = 4;
          return i + 10;

        case 4:
        case "end":
          return _context.stop();
      }
    }
  }, _marked);
}

var gen = generator(10);
console.log(gen.next().value); // 10

console.log(gen.next().value); // 20
`;

exports[`matches expected output: invariant-global.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

invariant(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

invariant(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: invariant-global.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

invariant(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
invariant(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: invariant-global.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

invariant(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
invariant(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: invariant-import.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { invariant } from '@adeira/js';
import { something } from 'else';

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

import { invariant } from '@adeira/js';
import { something } from 'else';

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');
`;

exports[`matches expected output: invariant-import.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { invariant } from '@adeira/js';
import { something } from 'else';

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _js = require("@adeira/js");

var _else = require("else");

/* eslint-disable */
!Math.random() ? process.env.NODE_ENV !== "production" ? (0, _js.invariant)(false, 'You shall not pass!') : (0, _js.invariant)(false) : void 0;
!Math.random() ? process.env.NODE_ENV !== "production" ? (0, _js.invariant)(false, 'You shall not pass %s!', 'Jerry') : (0, _js.invariant)(false) : void 0;
`;

exports[`matches expected output: invariant-import.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { invariant } from '@adeira/js';
import { something } from 'else';

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
import { invariant } from '@adeira/js';
import { something } from 'else';
!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass!') : invariant(false) : void 0;
!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass %s!', 'Jerry') : invariant(false) : void 0;
`;

exports[`matches expected output: invariant-require.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { invariant } = require('@adeira/js');

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

const { invariant } = require('@adeira/js');

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');
`;

exports[`matches expected output: invariant-require.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { invariant } = require('@adeira/js');

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
var _require = require('@adeira/js'),
    invariant = _require.invariant;

!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass!') : invariant(false) : void 0;
!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass %s!', 'Jerry') : invariant(false) : void 0;
`;

exports[`matches expected output: invariant-require.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { invariant } = require('@adeira/js');

invariant(Math.random(), 'You shall not pass!');
invariant(Math.random(), 'You shall not pass %s!', 'Jerry');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
var _require = require('@adeira/js'),
    invariant = _require.invariant;

!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass!') : invariant(false) : void 0;
!Math.random() ? process.env.NODE_ENV !== "production" ? invariant(false, 'You shall not pass %s!', 'Jerry') : invariant(false) : void 0;
`;

exports[`matches expected output: jsx.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

import type { Node } from 'react';

const React = () => {};

export default function Component(): Node {
  return (
    <>
      <div>aaa</div>
      <div>bbb</div>
    </>
  );
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

import type { Node } from 'react';

const React = () => {};

export default function Component(): Node {
  return (
    <>
      <div>aaa</div>
      <div>bbb</div>
    </>);

}
`;

exports[`matches expected output: jsx.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

import type { Node } from 'react';

const React = () => {};

export default function Component(): Node {
  return (
    <>
      <div>aaa</div>
      <div>bbb</div>
    </>
  );
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = Component;

var _jsxRuntime = require("react/jsx-runtime");

var React = function React() {};

function Component() {
  return /*#__PURE__*/(0, _jsxRuntime.jsxs)(_jsxRuntime.Fragment, {
    children: [/*#__PURE__*/(0, _jsxRuntime.jsx)("div", {
      children: "aaa"
    }), /*#__PURE__*/(0, _jsxRuntime.jsx)("div", {
      children: "bbb"
    })]
  });
}
`;

exports[`matches expected output: jsx.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

import type { Node } from 'react';

const React = () => {};

export default function Component(): Node {
  return (
    <>
      <div>aaa</div>
      <div>bbb</div>
    </>
  );
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import { jsx as _jsx } from "react/jsx-runtime";
import { Fragment as _Fragment } from "react/jsx-runtime";
import { jsxs as _jsxs } from "react/jsx-runtime";

var React = function React() {};

export default function Component() {
  return /*#__PURE__*/_jsxs(_Fragment, {
    children: [/*#__PURE__*/_jsx("div", {
      children: "aaa"
    }), /*#__PURE__*/_jsx("div", {
      children: "bbb"
    })]
  });
}
`;

exports[`matches expected output: numeric-separators.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const budget = 1_000_000_000_000;
const nibbles = 0b1010_0001_1000_0101;
const message = 0xa0_b0_c0;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const budget = 1_000_000_000_000;
const nibbles = 0b1010_0001_1000_0101;
const message = 0xa0_b0_c0;
`;

exports[`matches expected output: numeric-separators.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const budget = 1_000_000_000_000;
const nibbles = 0b1010_0001_1000_0101;
const message = 0xa0_b0_c0;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
var budget = 1000000000000;
var nibbles = 41349;
var message = 0xa0b0c0;
`;

exports[`matches expected output: numeric-separators.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

/* eslint-disable */

const budget = 1_000_000_000_000;
const nibbles = 0b1010_0001_1000_0101;
const message = 0xa0_b0_c0;

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
var budget = 1000000000000;
var nibbles = 41349;
var message = 0xa0b0c0;
`;

exports[`matches expected output: optional-catch-binding.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

try {
  // ...
} catch {
  // ...
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow strict

try {
  // ...
} catch {
  // ...
}
`;

exports[`matches expected output: optional-catch-binding.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

try {
  // ...
} catch {
  // ...
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

try {// ...
} catch (_unused) {// ...
}
`;

exports[`matches expected output: optional-catch-binding.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow strict

try {
  // ...
} catch {
  // ...
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
try {// ...
} catch (_unused) {// ...
}
`;

exports[`matches expected output: optional-chaining.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

module.exports = function (a: ?{ +[string]: any, ... }): string {
  return a?.b ?? 'default';
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow

module.exports = function (a: ?{ +[string]: any, ...}): string {
  return a?.b ?? 'default';
};
`;

exports[`matches expected output: optional-chaining.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

module.exports = function (a: ?{ +[string]: any, ... }): string {
  return a?.b ?? 'default';
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

module.exports = function (a) {
  var _a$b;

  return (_a$b = a === null || a === void 0 ? void 0 : a.b) !== null && _a$b !== void 0 ? _a$b : 'default';
};
`;

exports[`matches expected output: optional-chaining.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

module.exports = function (a: ?{ +[string]: any, ... }): string {
  return a?.b ?? 'default';
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
module.exports = function (a) {
  var _a$b;

  return (_a$b = a === null || a === void 0 ? void 0 : a.b) !== null && _a$b !== void 0 ? _a$b : 'default';
};
`;

exports[`matches expected output: rest-operator.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

/* eslint-disable no-console */

type AnyObject = { +[key: string]: any, ... };

module.exports = function (a: AnyObject, ...rest: Array<any>): AnyObject {
  console.warn([1, ...rest]);
  const { b, ...c } = a;
  return {
    ...b,
    ...c,
  };
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
// @flow

/* eslint-disable no-console */

type AnyObject = { +[key: string]: any, ...};

module.exports = function (a: AnyObject, ...rest: Array<any>): AnyObject {
  console.warn([1, ...rest]);
  const { b, ...c } = a;
  return {
    ...b,
    ...c };

};
`;

exports[`matches expected output: rest-operator.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

/* eslint-disable no-console */

type AnyObject = { +[key: string]: any, ... };

module.exports = function (a: AnyObject, ...rest: Array<any>): AnyObject {
  console.warn([1, ...rest]);
  const { b, ...c } = a;
  return {
    ...b,
    ...c,
  };
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");

var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));

var _objectWithoutProperties2 = _interopRequireDefault(require("@babel/runtime/helpers/objectWithoutProperties"));

var _excluded = ["b"];

function ownKeys(object, enumerableOnly) { var keys = Object.keys(object); if (Object.getOwnPropertySymbols) { var symbols = Object.getOwnPropertySymbols(object); enumerableOnly && (symbols = symbols.filter(function (sym) { return Object.getOwnPropertyDescriptor(object, sym).enumerable; })), keys.push.apply(keys, symbols); } return keys; }

function _objectSpread(target) { for (var i = 1; i < arguments.length; i++) { var source = null != arguments[i] ? arguments[i] : {}; i % 2 ? ownKeys(Object(source), !0).forEach(function (key) { (0, _defineProperty2.default)(target, key, source[key]); }) : Object.getOwnPropertyDescriptors ? Object.defineProperties(target, Object.getOwnPropertyDescriptors(source)) : ownKeys(Object(source)).forEach(function (key) { Object.defineProperty(target, key, Object.getOwnPropertyDescriptor(source, key)); }); } return target; }

/* eslint-disable no-console */
module.exports = function (a) {
  for (var _len = arguments.length, rest = new Array(_len > 1 ? _len - 1 : 0), _key = 1; _key < _len; _key++) {
    rest[_key - 1] = arguments[_key];
  }

  console.warn([1].concat(rest));
  var b = a.b,
      c = (0, _objectWithoutProperties2.default)(a, _excluded);
  return _objectSpread(_objectSpread({}, b), c);
};
`;

exports[`matches expected output: rest-operator.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
// @flow

/* eslint-disable no-console */

type AnyObject = { +[key: string]: any, ... };

module.exports = function (a: AnyObject, ...rest: Array<any>): AnyObject {
  console.warn([1, ...rest]);
  const { b, ...c } = a;
  return {
    ...b,
    ...c,
  };
};

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
import _defineProperty from "@babel/runtime/helpers/esm/defineProperty";
import _objectWithoutProperties from "@babel/runtime/helpers/esm/objectWithoutProperties";
var _excluded = ["b"];

function ownKeys(object, enumerableOnly) { var keys = Object.keys(object); if (Object.getOwnPropertySymbols) { var symbols = Object.getOwnPropertySymbols(object); enumerableOnly && (symbols = symbols.filter(function (sym) { return Object.getOwnPropertyDescriptor(object, sym).enumerable; })), keys.push.apply(keys, symbols); } return keys; }

function _objectSpread(target) { for (var i = 1; i < arguments.length; i++) { var source = null != arguments[i] ? arguments[i] : {}; i % 2 ? ownKeys(Object(source), !0).forEach(function (key) { _defineProperty(target, key, source[key]); }) : Object.getOwnPropertyDescriptors ? Object.defineProperties(target, Object.getOwnPropertyDescriptors(source)) : ownKeys(Object(source)).forEach(function (key) { Object.defineProperty(target, key, Object.getOwnPropertyDescriptor(source, key)); }); } return target; }

/* eslint-disable no-console */
module.exports = function (a) {
  for (var _len = arguments.length, rest = new Array(_len > 1 ? _len - 1 : 0), _key = 1; _key < _len; _key++) {
    rest[_key - 1] = arguments[_key];
  }

  console.warn([1].concat(rest));

  var b = a.b,
      c = _objectWithoutProperties(a, _excluded);

  return _objectSpread(_objectSpread({}, b), c);
};
`;

exports[`matches expected output: throw-expressions.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

() => throw new Error('');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

() => throw new Error('');
`;

exports[`matches expected output: throw-expressions.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

() => throw new Error('');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
(function () {
  return function (e) {
    throw e;
  }(new Error(''));
});
`;

exports[`matches expected output: throw-expressions.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

() => throw new Error('');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
(function () {
  return function (e) {
    throw e;
  }(new Error(''));
});
`;

exports[`matches expected output: warning-global.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

warning(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

warning(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: warning-global.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

warning(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
warning(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: warning-global.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

warning(Math.random(), 'This should stay AS IS!');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
warning(Math.random(), 'This should stay AS IS!');
`;

exports[`matches expected output: warning-import.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { warning } from '@adeira/js';
import { something } from 'else';

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

import { warning } from '@adeira/js';
import { something } from 'else';

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');
`;

exports[`matches expected output: warning-import.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { warning } from '@adeira/js';
import { something } from 'else';

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

var _js = require("@adeira/js");

var _else = require("else");

/* eslint-disable */
process.env.NODE_ENV !== "production" ? (0, _js.warning)(Math.random(), 'I am warning you!') : void 0;
process.env.NODE_ENV !== "production" ? (0, _js.warning)(Math.random(), 'I am warning you %s!', 'René') : void 0;
`;

exports[`matches expected output: warning-import.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

import { warning } from '@adeira/js';
import { something } from 'else';

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
import { warning } from '@adeira/js';
import { something } from 'else';
process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you!') : void 0;
process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you %s!', 'René') : void 0;
`;

exports[`matches expected output: warning-require.js: flow 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { warning } = require('@adeira/js');

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */

const { warning } = require('@adeira/js');

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');
`;

exports[`matches expected output: warning-require.js: js (old browsers) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { warning } = require('@adeira/js');

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
"use strict";

/* eslint-disable */
var _require = require('@adeira/js'),
    warning = _require.warning;

process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you!') : void 0;
process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you %s!', 'René') : void 0;
`;

exports[`matches expected output: warning-require.js: js-esm (with ES6 import/export) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
/* eslint-disable */

const { warning } = require('@adeira/js');

warning(Math.random(), 'I am warning you!');
warning(Math.random(), 'I am warning you %s!', 'René');

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
/* eslint-disable */
var _require = require('@adeira/js'),
    warning = _require.warning;

process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you!') : void 0;
process.env.NODE_ENV !== "production" ? warning(Math.random(), 'I am warning you %s!', 'René') : void 0;
`;
